components/Layout/Dropdown/dropdown.module.css
.dropdown {
  position: absolute;
  z-index: 100;
  left: 0;
  width: 100%;
  top: 10vh;
  background-color: var(--color-grey-300);
  animation: rotateDropdown 600ms ease-in-out forwards;
  transform-origin: top center;
}

.link {
  padding: 1rem;
}

.link a, .link p {
  color: var(--color-primary-500);
  font-size: var(--size-6);
  line-height: var(--size-6);
  padding: 1rem;
  text-decoration: none;
}


@keyframes rotateDropdown {
  0% {
    transform: rotateX(-90deg)
  }
  70% {
    transform: rotateX(20deg)
  }
  100% {
    transform: rotateX(0deg)
  }
}

.brands{

  background-color: var(--color-grey-200);
  animation: brandDrop 300ms ease-in-out forwards;
  transform-origin: top center;
  width: 150%;
  margin-left: -25%;
}

.brands a {
  color: var(--color-primary-300);
}

@keyframes brandDrop {
  0% {
    transform: rotateX(-90deg)
  }
  100% {
    transform: rotateX(0deg)
  }
}

